--- a/src/Germadent.UserManagementCenter.App/Views/UsersView.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/UsersView.xaml
@@ -39,6 +39,8 @@
                         </Grid>
 
                         <TextBlock Grid.Row="1" Text="{Binding Roles}" Margin="0,3,0,0" Opacity="0.6"/>
+
+                        <TextBlock Grid.Row="1" Text="{Binding Phone}" FontSize="10" HorizontalAlignment="Right" Margin="0,0,3,0"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
