--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -4,10 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:properties="clr-namespace:Germadent.Rma.App.Properties"
-        xmlns:designmock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
         xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
         mc:Ignorable="d"
-        Title="{x:Static properties:Resources.AppTitle}" 
+        Title="{Binding Title}" 
         MinWidth="1024"
         Width="1024"
         MinHeight="600"
