--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:toothCard="clr-namespace:Germadent.Rma.App.ViewModels.ToothCard"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
-             xmlns:toothCard="clr-namespace:Germadent.Rma.App.ViewModels.ToothCard">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <DataTemplate DataType="{x:Type toothCard:CheckableDictionaryItemViewModel}">
             <TextBlock Text="{Binding Item.Name}"/>
