--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/PriceListStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/PriceListStepUserControl.xaml
@@ -17,7 +17,7 @@
         <local:MouthUserControl Grid.Row="0" Height="105" 
                                 DataContext="{Binding ToothCard}"/>
 
-        <local:PriceListUserControl Grid.Row="1" Margin="0,6,0,0"
+        <local:PriceListUserControl Grid.Row="1" Margin="0,6,0,0" IsEnabled="{Binding ToothCard.SelectedTeeth, Converter={StaticResource NotNullToBoolConverter}}"
                                     DataContext="{Binding PriceList}"/>
     </Grid>
 </UserControl>
