--- a/src/Germadent.UserManagementCenter.App/Views/AddRoleWindow.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/AddRoleWindow.xaml
@@ -37,8 +37,12 @@
         </Grid>
 
         <ListBox Grid.Row="1" Margin="0,6,0,0"
-                 ItemsSource="{Binding Rights}"
-                 ItemContainerStyle="{StaticResource StlnListBoxItemStyleWithoutSelection}">
+                 ItemsSource="{Binding Rights}">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource StlnListBoxItemStyleWithoutSelection}">
+                    <Setter Property="BorderThickness" Value="0"/>
+                </Style>
+            </ListBox.ItemContainerStyle>
             <ListBox.GroupStyle>
                 <GroupStyle>
                     <GroupStyle.ContainerStyle>
