--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/PriceListUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/PriceListUserControl.xaml
@@ -30,8 +30,17 @@
                      ItemContainerStyle="{StaticResource StlnListBoxItemStyle}">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type pricing:PriceGroupViewModel}">
-                        <TextBlock Text="{Binding DisplayName}" Margin="3,0,0,0" TextTrimming="CharacterEllipsis"
-                                   helpers:TextBlockToolTipHelper.ShowTooltipWhenTrimming="True"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="15"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding DisplayName}" Margin="3,0,0,0" TextTrimming="CharacterEllipsis"
+                                       helpers:TextBlockToolTipHelper.ShowTooltipWhenTrimming="True"/>
+                            <Path Grid.Column="1" Margin="3,0,0,0" Data="{StaticResource CheckMarkGeometry}" Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListBoxItem}, Path=Foreground}" Stretch="Fill"
+                                  Width="10" Height="10" Opacity="0.8"
+                                  Visibility="{Binding HasChanges, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
